{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 116,
  "lineage": "f4f5fda2-f781-3aff-408c-5957644762a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2_for_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08df646e18b182346",
            "arn": "arn:aws:ec2:ap-south-1:652044033816:instance/i-08df16d078f8c3dc5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08df16d078f8c3dc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS_AMI",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05aa4dd23aa4f7573",
            "private_dns": "ip-11-0-0-100.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.0.100",
            "public_ip": "43.205.129.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6866f2c4a2e0a4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04a6ab354c2177460"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eac8e4a31bf02c5f",
            "tags": {
              "Name": "Terra_ec2"
            },
            "tags_all": {
              "Name": "Terra_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a6ab354c2177460"
            ]
          },
          "dependencies": [
            "aws_security_group.terra_sg",
            "aws_subnet.autoscaling_ws_sub_1",
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "autoscaling_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652044033816:internet-gateway/igw-0957c88b02785fedc",
            "id": "igw-0957c88b02785fedc",
            "owner_id": "652044033816",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0eebb0794747f4daf"
          },
          "dependencies": [
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terra_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:loadbalancer/app/terra-alb/a9fea3d7ac2cb385",
            "arn_suffix": "app/terra-alb/a9fea3d7ac2cb385",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-alb-1257348970.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:loadbalancer/app/terra-alb/a9fea3d7ac2cb385",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terra-alb",
            "security_groups": [
              "sg-049280ea72a799ab8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d44d377b085357bc"
              },
              {
                "subnet_id": "subnet-0eac8e4a31bf02c5f"
              }
            ],
            "subnets": [
              "subnet-0d44d377b085357bc",
              "subnet-0eac8e4a31bf02c5f"
            ],
            "tags": {
              "Name": "Terra ALB"
            },
            "tags_all": {
              "Name": "Terra ALB"
            },
            "vpc_id": "vpc-0eebb0794747f4daf",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.terra_alb_http",
            "aws_subnet.autoscaling_ws_sub_1",
            "aws_subnet.autoscaling_ws_sub_2",
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terra_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:listener/app/terra-alb/a9fea3d7ac2cb385/c6bcbcaf690131a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:targetgroup/terra-alb-target-grp/239384c474f7df8f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:listener/app/terra-alb/a9fea3d7ac2cb385/c6bcbcaf690131a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:loadbalancer/app/terra-alb/a9fea3d7ac2cb385",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terra_alb",
            "aws_lb_target_group.terra_alb_target_grp",
            "aws_security_group.terra_alb_http",
            "aws_subnet.autoscaling_ws_sub_1",
            "aws_subnet.autoscaling_ws_sub_2",
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terra_alb_target_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:targetgroup/terra-alb-target-grp/239384c474f7df8f",
            "arn_suffix": "targetgroup/terra-alb-target-grp/239384c474f7df8f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:652044033816:targetgroup/terra-alb-target-grp/239384c474f7df8f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terra-alb-target-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eebb0794747f4daf"
          },
          "dependencies": [
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_VPC_routetble",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652044033816:route-table/rtb-0dfb05dd31bfb6229",
            "id": "rtb-0dfb05dd31bfb6229",
            "owner_id": "652044033816",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0957c88b02785fedc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Custom Public Subnet in terra VPC"
            },
            "tags_all": {
              "Name": "Custom Public Subnet in terra VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eebb0794747f4daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.autoscaling_igw",
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_vpc_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073375bca179f7c52",
            "route_table_id": "rtb-0dfb05dd31bfb6229",
            "subnet_id": "subnet-0eac8e4a31bf02c5f"
          },
          "dependencies": [
            "aws_internet_gateway.autoscaling_igw",
            "aws_route_table.terra_VPC_routetble",
            "aws_subnet.autoscaling_ws_sub_1",
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_vpc_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003d8e6d2acb562ff",
            "route_table_id": "rtb-0dfb05dd31bfb6229",
            "subnet_id": "subnet-0d44d377b085357bc"
          },
          "dependencies": [
            "aws_internet_gateway.autoscaling_igw",
            "aws_route_table.terra_VPC_routetble",
            "aws_subnet.autoscaling_ws_sub_2",
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652044033816:security-group/sg-049280ea72a799ab8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049280ea72a799ab8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra_alb_http",
            "name_prefix": "",
            "owner_id": "652044033816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Only HTTP inbound \u0026 ALL protocols outbound"
            },
            "tags_all": {
              "Name": "Only HTTP inbound \u0026 ALL protocols outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eebb0794747f4daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652044033816:security-group/sg-04a6ab354c2177460",
            "description": "Allow http connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a6ab354c2177460",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP connection inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH connection inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra_sg",
            "name_prefix": "",
            "owner_id": "652044033816",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra_sg"
            },
            "tags_all": {
              "Name": "terra_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eebb0794747f4daf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "autoscaling_ws_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652044033816:subnet/subnet-0eac8e4a31bf02c5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eac8e4a31bf02c5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652044033816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AutoScalingWebserver subnet 1"
            },
            "tags_all": {
              "Name": "AutoScalingWebserver subnet 1"
            },
            "vpc_id": "vpc-0eebb0794747f4daf"
          },
          "dependencies": [
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "autoscaling_ws_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652044033816:subnet/subnet-0d44d377b085357bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d44d377b085357bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652044033816",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AutoScalingWebserver subnet 2"
            },
            "tags_all": {
              "Name": "AutoScalingWebserver subnet 2"
            },
            "vpc_id": "vpc-0eebb0794747f4daf"
          },
          "dependencies": [
            "aws_vpc.terra_autoscalingwebserver_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_autoscalingwebserver_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:652044033816:vpc/vpc-0eebb0794747f4daf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/24",
            "default_network_acl_id": "acl-047af9123c9753bff",
            "default_route_table_id": "rtb-02bcf13d100e51490",
            "default_security_group_id": "sg-0f62bb1fec54e1af8",
            "dhcp_options_id": "dopt-046d3a0342aa6bb3c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eebb0794747f4daf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bcf13d100e51490",
            "owner_id": "652044033816",
            "tags": {
              "Name": "Terra Auto Scaling Webserver"
            },
            "tags_all": {
              "Name": "Terra Auto Scaling Webserver"
            }
          }
        }
      ]
    }
  ]
}